--- a/courses/003 控制流.md
+++ b/courses/003 控制流.md
@@ -11,8 +11,12 @@
 
 ```
     for(uint i = 0; i < 10; i++){
-        //..
+        //i的起始值，显性的设置为0
     }
+
+    for (uint i; i < path.length - 1; i++) {
+        //i的起始值，隐性的设置为0
+    }    
 ```    
 
 　
