--- a/courses/019 ERC20代币.md
+++ b/courses/019 ERC20代币.md
@@ -87,6 +87,20 @@ function _callOptionalReturn(IERC20 token, bytes memory data) private returns (b
     return success;
 }
 
+- 同理，还有安全授权函数：
+    function safeApprove(IERC20 token, address spender, uint256 amount)
+        internal
+    {
+        (bool success, bytes memory returnData) = address(token).call(
+            abi.encodeCall(IERC20.approve, (spender, amount))
+        );
+        require(
+            success
+                && (returnData.length == 0 || abi.decode(returnData, (bool))),
+            "Approve fail"
+        );
+    }
+
 ```
 ---------------------------------------------------------------------------------------------
 
