--- a/courses/016 abi编码相关.md
+++ b/courses/016 abi编码相关.md
@@ -61,6 +61,12 @@
         3.适用于从 abi.encode 和 abi.encodeWithSignature 得到的字节数组。    
 
 　
+- 示例 - 编码、解码
+```
+bytes memory data = abi.encode(adrA, adrB);
+(address adrA, address adrB) = abi.decode(data, (address, address));
+```
+　
 
 -----------------------------------------------------------------------------------------------    
 
