--- a/courses/001 通行证与编译器版本.md
+++ b/courses/001 通行证与编译器版本.md
@@ -64,6 +64,11 @@ pragma solidity >=0.0.0;                任意版本(不推荐)
 pragma solidity ^0.7.0 || ^0.8.0;       多个版本范围
 ```
 
+　
+
+#### 其他说明：
+- solidity 0.8.0 版本以及之后的版本，引入了"算术溢出检查"
+
 
 
 
