--- a/courses/008 接收以太币.md
+++ b/courses/008 接收以太币.md
@@ -2,11 +2,11 @@
 #### 以太币的单位：
 ```
 Wei(最小的计量单位)
-Kwei(Babbage) = 10^3  Wei
-Mwei(Lovelace) = 10^6 Wei
-Gwei(Shannon) = 10^9 Wei
-Microether(Szabo) = 10^12 Wei
-Milliether(Finney) = 10^15 Wei
+Kwei(Babbage) = 10^3  Wei           // Charles Babbage 他是早期计算机设计的先驱之一。
+Mwei(Lovelace) = 10^6 Wei           // Ada Lovelace 她被认为是世界上第一位程序员。
+Gwei(Shannon) = 10^9 Wei            // Claude Shannon 他是信息论的创始人。
+Microether(Szabo) = 10^12 Wei       // Nick Szabo 他是一位计算机科学家、法律学者和密码学家，也因为智能合约的概念而闻名。
+Milliether(Finney) = 10^15 Wei      // Hal Finney 他是比特币的早期采用者和支持者，也是密码学领域的重要人物。
 Ether = 10^18 Wei
 
 记忆方式：看门狗(K - M - G)
