--- a/courses/017 哈希函数.md
+++ b/courses/017 哈希函数.md
@@ -11,6 +11,95 @@
 - 碰撞性：良好的哈希函数应具有抗碰撞性，即很难找到两个不同的输入产生相同的哈希值。这对于区块链的安全性至关重要。
 - 常用哈希函数：keccak256(以太坊中主要的哈希函数，常用于生成唯一的标识符)，sha256(另一种哈希函数，通常用于需要较高安全性的场景)
 
+　
+
+------------------------------------------------------------------------------------
+
+　
+
+#### keccak256函数：
+- keccak256 是一种广泛使用的加密散列函数，用于生成256位的哈希值。
+
+#### keccak256函数的用途：
+- 生成唯一标识符或哈希值，比如对用户地址、ID等进行标识。
+```
+pragma solidity ^0.8.0;
+
+contract UniqueID {
+    function generateID(address user, uint256 timestamp) public pure returns (bytes32) {
+        return keccak256(abi.encodePacked(user, timestamp));        
+    }
+}
+```
+- 生成消息的哈希值，以供签名验证。
+```
+pragma solidity ^0.8.0;
+
+contract SignatureVerifier {
+    function getMessageHash(address recipient, uint256 amount) public pure returns (bytes32) {
+        return keccak256(abi.encodePacked(recipient, amount));
+    }
+}
+```
+- 生成```Merkle Tree```的叶子节点或中间节点哈希值。
+```
+pragma solidity ^0.8.0;
+
+contract MerkleTree {
+    function hashLeaf(bytes32 leaf) public pure returns (bytes32) {
+        return keccak256(abi.encodePacked(leaf));
+    }
+    
+    function hashNode(bytes32 left, bytes32 right) public pure returns (bytes32) {
+        return keccak256(abi.encodePacked(left, right));
+    }
+}
+```
+- 生成伪随机数。
+```
+pragma solidity ^0.8.0;
+
+contract RandomNumber {
+    function getRandomNumber(uint256 seed) public view returns (uint256) {
+        return uint256(keccak256(abi.encodePacked(block.timestamp, block.difficulty, seed))) % 100;
+    }
+}
+```
+- 比较两个字符串或数据是否相等。
+```
+pragma solidity ^0.8.0;
+
+contract CompareStrings {
+    function compare(string memory str1, string memory str2) public pure returns (bool) {
+        return keccak256(abi.encodePacked(str1)) == keccak256(abi.encodePacked(str2));
+    }
+}
+```
+- 定义存储槽，以防存储位置发生冲突。
+```
+pragma solidity ^0.8.0;
+
+contract StorageLayout {
+    bytes32 private constant VALUE_SLOT = keccak256("unique.storage.value");
+
+    function setValue(uint256 value) public {
+        bytes32 slot = VALUE_SLOT;
+        assembly {
+            sstore(slot, value)
+        }
+    }
+
+    function getValue() public view returns (uint256) {
+        bytes32 slot = VALUE_SLOT;
+        uint256 value;
+        assembly {
+            value := sload(slot)
+        }
+        return value;
+    }
+}
+
+```
 
 
 
