--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -61,20 +61,23 @@
 　
 
 #### 地址类型细说：
-- 20字节值
-- 十六进制字符的每一位都可以表示 16 种不同的值，而 4 位二进制数据也可以表示 16 种不同的值（0 到 15）；每1位个十六进制字符代表4位个二进制
-- 1个字节 = 8位个二进制数
-- 20个字节 = 8*20位个二进制数 = 8*20/4位个十六进制数 = 40位个十六进制数
+- 20个字节
+- 1个字节 = 由8位（Bits）组成，也就是[2^8-1 = 255]，即从0到255的值。
+- 1个字节 = 2个十六进制数(两个十六进制数，FF => 255)
+- 1个字节 = 3个十进制数(两个十进制数，99 => 99，不足以表达255，3个十进制数，999 => 999 足以表达)
+- 1个字节 = 3个八进制数(两个八进制数，77 => 63，不足以表达255，3个十进制数，777 => 511 足以表达)
 - 如，```0x1234567890123456789012345678901234567890```，十六进制表达方式，即40个值
 - 获取合约的地址，如，合约实例为 ```TargetContract target```，那么，它的地址为 ```address(target)```
 
 　
 
 #### 定长字节型细说：
+- 32个字节
+- 十六进制表达方式，即40个值
 - ```bytes32 public _byte32 = "MiniSolidity";```
 - "MiniSolidity"的长度是11个字符。每个字符在UTF-8编码中占用1个字节，所以总长度是11字节。
 - ```"MiniSolidity" + 21个零字节```
-- ```4d696e69536f6c69646974790000000000000000000000000000000000000000```
+- ```0x4d696e69536f6c69646974790000000000000000000000000000000000000000```
 
 　
 
