--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -64,8 +64,8 @@
 - 20个字节
 - 1个字节 = 由8位（Bits）组成，也就是[2^8-1 = 255]，即从0到255的值。
 - 1个字节 = 2个十六进制数(两个十六进制数，FF => 255)
-- 1个字节 = 3个十进制数(两个十进制数，99 => 99，不足以表达255，3个十进制数，999 => 999 足以表达)
-- 1个字节 = 3个八进制数(两个八进制数，77 => 63，不足以表达255，3个十进制数，777 => 511 足以表达)
+- 1个字节 = 3个十进制数(两个十进制数，99 => 99，不足以表达255；3个十进制数，999 => 999 足以表达)
+- 1个字节 = 3个八进制数(两个八进制数，77 => 63，不足以表达255；3个十进制数，777 => 511 足以表达)
 - 如，```0x1234567890123456789012345678901234567890```，十六进制表达方式，即40个值
 - 获取合约的地址，如，合约实例为 ```TargetContract target```，那么，它的地址为 ```address(target)```
 
