--- a/courses/004 异常.md
+++ b/courses/004 异常.md
@@ -12,7 +12,7 @@
 
 #### assert：
 - 类似于require，但不能传入描述字符串
-- 失败时消耗所有 gas：如果条件为假，交易将回滚并消耗所有剩余的 gas。
+- 失败时消耗所有 gas：如果条件为假，交易将回滚并消耗所有剩余的gas。(设计目的，一旦触发就代表严重错误，gas消耗完，则可以防止恶意的重复调用。)
 - 适用：逻辑检查判断(通常用于检测代码中的严重错误和不变量违反、不应发生的错误)
 - 控制台的异常定位，不明显
 - ```assert(result >= a);```
