--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -46,14 +46,14 @@
 
 　
 
-#### uint
+#### uint8
 - 取值范例【0 ~ 1111 1111】
 - 取值【0 ~ 2^Bit -1】
 - 如【0 ~ 2^8 -1】即【0 ~ 255】
 
 　
 
-#### int(建议复习一下计算机的补码原理)
+#### int8 (建议复习一下计算机的补码原理)
 - 取值范例【1111 1111 , 0111 1111】
 - 取值【-1*(2^(Bit-1)) ~ 2^(Bit-1) -1】
 - 如【-1*(2^7) ~ 2^7 -1】即【-128 ~ 127】
