--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -13,6 +13,23 @@
 
 　
 
+**ABI**
+- 全称 Application Binary Interface：应用程序二进制接口
+- 它是智能合约与外部世界交互的接口定义。
+
+　
+
+**Bytecode**
+- 字节码
+- 字节码是一种中间形式的代码，它介于高级编程语言（如 Solidity、Python、Java 等）和机器码之间。
+- 通常由高级语言编译器生成，然后由解释器或虚拟机（如以太坊虚拟机 EVM、Java 虚拟机 JVM 等）执行。
+- 在以太坊平台，字节码是指智能合约编译后的二进制代码。
+- 这些字节码可以直接在以太坊虚拟机（EVM）上执行。
+- 字节码是一系列的操作码（opcodes）和数据，这些操作码和数据定义了合约的逻辑和行为。
+- 根据EIP-170的规定，智能合约对应的字节码，其最大大小被限制为24,576字节（即24 KB）。
+
+　
+
 **EIP**
 - 全称 Ethereum Improvement Proposals：以太坊改进建议
 - 是以太坊开发者社区提出的改进建议, 是一系列以编号排定的文件, 类似互联网上IETF的RFC。
