--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -129,3 +129,11 @@
 - 是由普通用户控制的账户。
 - 用户使用私钥对该账户进行控制和操作，因此通常被称为“外部账户”或“外部拥有账户”。
 - EOA 不包含智能合约代码，而是由一个公钥和私钥对来管理。每个 EOA 都有一个与之关联的地址，该地址是通过公钥生成的。
+
+　
+
+**IPFS**
+- 全称 InterPlanetary File System：星际文件系统
+- 点到点的超媒体协议，它让网络更快、更安全、更开放。
+- 是一个 去中心化的分布式文件存储和共享协议，旨在通过全球范围内的计算机和网络，实现高效、安全、持久的数据存储和共享。
+- 采用 内容寻址（content addressing）技术，与传统的 HTTP 协议相比，它不依赖于文件存储位置（如服务器的 IP 地址），而是根据文件的内容（即文件的哈希值）来进行标识和访问。
