--- a/courses/008 接收以太币.md
+++ b/courses/008 接收以太币.md
@@ -14,6 +14,7 @@ Ether = 10^18 Wei
 
 #### receive()函数：
 - 固定形式：```receive() external payable { ... }```
+- 发出方，使用transfer、send 或 call 进行转账
 - 不能有任何的参数，不能返回任何值，必须包含external和payable
 - 关于调用：部署时直接转入以太币，不会触发receive()。(有兴趣可以直接测试，嘿嘿!)
 - 关于调用：只会在合约部署完毕结束后，接收到以太币，且msg.data为空时，才被触发。
@@ -23,6 +24,7 @@ Ether = 10^18 Wei
 #### fallback()函数：
 - 固定形式1：```fallback() external payable { ... }```
 - 固定形式2：```fallback() external { ... }```
+- 发出方，使用transfer、send 或 call 进行转账
 - 不能有任何的参数，不能返回任何值，必须包含external
 - 关于调用：部署时直接转入以太币，不会触发fallback()。(有兴趣可以直接测试，嘿嘿!)
 - 关于调用：会在合约部署完毕结束后，接收到以太币，且msg.data不为空时，会被触发。
@@ -31,5 +33,9 @@ Ether = 10^18 Wei
 - 关于gas：调用者通常会使用call触发fallback，但仍然建议不要过于复杂，以免突破gas限制。
 
 
+#### 普通函数
+- 函数体使用payable修饰
+- 即使，合约内没有定义receive或fallback，也能接收以太币
+- 示例：```function foo(uint256 _value) public payable```
 
 
