--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -13,6 +13,19 @@
 
 　
 
+**POS**
+- 全称 Proof of Stake：权益证明
+- 共识机制之一，通过验证者（持有一定数量代币的用户，权益就是持有的代币数量）来确认交易并生成新区块。
+
+　
+
+**POW**
+- 全称 Proof of Work：工作量证明
+- 共识机制之一，矿工通过解决复杂的数学难题来验证交易和生成新区块。
+- 需要大量的计算资源和电力，因此被认为是一种能量密集型的共识算法。
+
+　
+
 **ABI**
 - 全称 Application Binary Interface：应用程序二进制接口
 - 它是智能合约与外部世界交互的接口定义。
