--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -16,6 +16,7 @@
 **POS**
 - 全称 Proof of Stake：权益(质押量)证明
 - 共识机制之一，通过验证者（持有一定数量代币的用户，权益就是持有的代币数量）来确认交易并生成新区块。
+- 以太坊2.0使用的就是POS的共识机制，参与的验证节点数超过50万个，每个节点用户至少需要质押32个ETH，来运行一个验证者节点。
 
 　
 
