--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -24,6 +24,7 @@
 - 全称 Proof of Work：工作量证明
 - 共识机制之一，矿工通过解决复杂的数学难题来验证交易和生成新区块。
 - 需要大量的计算资源和电力，因此被认为是一种能量密集型的共识算法。
+- 比特币链，是第一个采用POW共识机制的区块链；最近的狗狗币，也是使用POW模式。
 
 　
 
