--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -152,3 +152,26 @@
 - 点到点的超媒体协议，它让网络更快、更安全、更开放。
 - 是一个 去中心化的分布式文件存储和共享协议，旨在通过全球范围内的计算机和网络，实现高效、安全、持久的数据存储和共享。
 - 采用 内容寻址（content addressing）技术，与传统的 HTTP 协议相比，它不依赖于文件存储位置（如服务器的 IP 地址），而是根据文件的内容（即文件的哈希值）来进行标识和访问。
+
+　
+
+**ICO**
+- 全称 Initial Coin Offering：首次代币发行
+
+　
+
+**IEO**
+- 全称 Initial Exchange Offering：首次交易所发行
+
+　
+
+**IDO**
+- 全称 Initial DEX Offering：首次去中心化交易所发行
+
+　
+
+**IPO**
+- 全称 Initial Public Offering：首次公开募股
+
+　
+
