--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -175,3 +175,12 @@
 
 　
 
+| 特性             | ICO                              | IEO                              | IDO                              | IPO                             |
+|------------------|----------------------------------|----------------------------------|----------------------------------|---------------------------------|
+| **平台类型**      | 无特定平台                       | 中心化交易所                    | 去中心化交易所                   | 证券交易所                      |
+| **中心化程度**    | 中等                             | 高                               | 低                               | 高                              |
+| **门槛**          | 低                               | 中                               | 低                               | 高                              |
+| **流动性**        | 较低                             | 高                               | 很高                             | 中                              |
+| **监管**          | 松散                             | 适中                             | 松散                             | 严格                            |
+| **风险**          | 高                               | 中                               | 高                               | 低                              |
+| **交易方式**      | 项目方发行代币，用户直接购买     | 通过交易所购买代币              | 在 DEX 上直接购买代币            | 购买股票，成为股东              |
