--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -184,3 +184,4 @@
 | **监管**          | 松散                             | 适中                             | 松散                             | 严格                            |
 | **风险**          | 高                               | 中                               | 高                               | 低                              |
 | **交易方式**      | 项目方发行代币，用户直接购买     | 通过交易所购买代币              | 在 DEX 上直接购买代币            | 购买股票，成为股东              |
+| **知名代币**      | ETH、EOS、Tezos             | BNB、BTT、OKB              | UNI、SUSHI、CAKE            | 略过              |
