--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -60,19 +60,30 @@
 
 
 ```
-    针对msg.sender 举例子；
-    假设你的场景是这样的：
+// 针对msg.sender 举例子:
 
-    外部账户（如用户） 调用了 合约A 的 fooA 方法。
-    在 fooA 方法内部，调用了 合约B 的 fooB 方法。
-    在 fooB 方法内部，调用了 合约C 的 fooC 方法。
-    且 fooA/fooB/fooC 内部，都是使用了msg.sender。
+// 合约A
+function fooA() public {
+    // msg.sender 在此为用户的地址
+    address sender = msg.sender;  // sender == 0xUser -> (外部地址)
+    // 调用合约B的fooB方法
+    ContractB(contractB).fooB();
+}
 
-    对于上述情况，各个函数中的 msg.sender 值如下：
+// 合约B
+function fooB() public {
+    // msg.sender 在此为合约A的地址
+    address sender = msg.sender;  // sender == address(ContractA) -> 合约A的地址
+    // 调用合约C的fooC方法
+    ContractC(contractC).fooC();
+}
 
-    fooA 中的 msg.sender：这是最初发起调用的外部账户（用户的地址）。
-    fooB 中的 msg.sender：这是调用 fooB 的合约地址，即 合约A 的地址。
-    fooC 中的 msg.sender：这是调用 fooC 的合约地址，即 合约B 的地址。
+// 合约C
+function fooC() public {
+    // msg.sender 在此为合约B的地址
+    address sender = msg.sender;  // sender == address(ContractB) -> 合约B的地址
+}
+
 ```
 
 
