--- a/others/001 ICO浅析.md
+++ b/others/001 ICO浅析.md
@@ -5,15 +5,15 @@
 　
 
 #### 1. 项目方准备阶段(即，开始之前)：
-- 1.1 制定白皮书（Whitepaper）
+##### 1.1 制定白皮书（Whitepaper）
 - 白皮书是ICO的核心文件，详细说明项目的愿景、技术架构、商业模式、代币经济学（Tokenomics）、ICO募集目标、团队成员、风险提示等。
 - 项目方需要在白皮书中明确代币的发行总量、分配比例、ICO时间表等重要信息。
-- 1.2 确定ICO时间和额度
+##### 1.2 确定ICO时间和额度
 - 项目方会设定ICO的起止时间，并明确每个阶段的募资目标（例如，预售阶段、公募阶段、早期投资者等）。
-- 1.3 部署智能合约
+##### 1.3 部署智能合约
 - 创建并部署一个智能合约，用于ICO期间的资金收集、代币发放等自动化操作。
 - 合约确保项目方按预定规则（如代币价格、上限等）进行代币的发行，确保过程公开透明。
-- 1.4 创建官方网站和KYC/AML平台
+##### 1.4 创建官方网站和KYC/AML平台
 - 项目方需要建立官方网站，提供项目的相关信息、白皮书和参与ICO的详细步骤。
 - 如果项目方要求参与者进行KYC（了解你的客户）验证，通常会有专门的KYC平台，用于验证投资者的身份和合规性。KYC验证有助于防止洗钱和其他非法活动。
 
