--- a/others/001 ICO浅析.md
+++ b/others/001 ICO浅析.md
@@ -20,45 +20,45 @@
 　
 
 #### 2. 用户参与ICO
-- 2.1 注册并完成KYC验证
+##### 2.1 注册并完成KYC验证
 - 用户首先访问项目方的官方网站，创建账户并开始KYC验证。
 - 用户需要提供身份证明文件（如护照或身份证）、住址证明以及钱包地址等信息。这个步骤是为了确保项目方合法合规，防止洗钱和欺诈行为。
-- 2.2 申请加入白名单
+##### 2.2 申请加入白名单
 - 完成KYC验证后，用户可以申请加入ICO白名单。白名单通常是为了限制ICO的参与者数量或保障ICO的公平性。
-- 2.3 确认参与资格
+##### 2.3 确认参与资格
 - 一旦用户被加入白名单，项目方将通知用户他们具备了参与ICO的资格。
 - 用户的KYC信息和钱包地址已与其身份信息关联，确保参与者是合法的。
-- 2.4 选择支付方式并进行资金转账
+##### 2.4 选择支付方式并进行资金转账
 - 用户根据项目方提供的信息，选择合适的支付方式（如加密货币支付或法币支付）。
 - 用户发起转账并将资金转账至项目方提供的ICO钱包地址。
-- 2.5 用户拿取交易哈希并提供证明
+##### 2.5 用户拿取交易哈希并提供证明
 - 转账完毕后，用户将获得一个唯一的交易哈希（Transaction Hash），在浏览器中查看。
 - 用户将交易哈希提供给项目方，证明他们已完成转账。
-- 2.6 项目方确认转账
+##### 2.6 项目方确认转账
 - 项目方通过交易哈希，查询区块链浏览器，验证交易是否成功，包括核对发送方的钱包地址、金额和接收方地址等信息。
 - 项目方确认资金到账后，开始发放代币。代币可以按预定规则（如代币数量、时间等）发放到用户的指定钱包地址。
 
 　
 
 #### 3. ICO过程中项目方的操作
-- 3.1 资金募集与监控
+##### 3.1 资金募集与监控
 - 项目方会通过ICO的智能合约实时监控募集情况，确保募集资金符合预定目标，并保证ICO的公平性。
 - 如果采用阶梯式募资（例如分阶段销售），项目方将根据每个阶段的目标资金调整代币的发行数量和价格。
-- 3.2 资金安全和合规性
+##### 3.2 资金安全和合规性
 - 项目方应确保资金的安全，避免被恶意攻击或盗取。例如，项目方可能会使用多重签名钱包来管理ICO资金，以提高资金安全性。
 - 项目方还需要遵守反洗钱（AML）和合规要求，确保所有参与者都是合法的，并避免非法资金流入。
-- 3.3 代币分发
+##### 3.3 代币分发
 - ICO结束后，项目方会按照预定的规则，将代币分发给合法的投资者。
 - 代币可能会按照交易记录进行分配，或根据投资者提供的地址进行一次性发放。
-- 3.4 后期运营和上市
+##### 3.4 后期运营和上市
 - ICO完成后，项目方将继续运营项目，并推动代币在交易所上市，以便用户可以交易和使用代币。
 - 项目方可能会发布关于项目进展的定期更新，向社区展示项目的透明度和进展情况。
 
 　
 
 #### 4. 用户资金转移和代币交易
-- 4.1 代币领取与交易
+##### 4.1 代币领取与交易
 - 用户在ICO结束后，收到项目方分发的代币，这些代币会进入用户提供的钱包地址。
 - 代币的流通通常依赖于是否在加密货币交易所上市。一旦代币在交易所上市，用户就可以将代币转移、交易或兑现。
-- 4.2 社区和支持
+##### 4.2 社区和支持
 - 项目方可能通过社交媒体、邮件列表或Telegram等方式保持与社区的联系，更新项目进展，解答投资者的疑问，并与社区互动。
