--- a/others/001 ICO浅析.md
+++ b/others/001 ICO浅析.md
@@ -78,3 +78,22 @@
 - 代币的流通通常依赖于是否在加密货币交易所上市。一旦代币在交易所上市，用户就可以将代币转移、交易或兑现。
 ##### 4.2 社区和支持
 - 项目方可能通过社交媒体、邮件列表或Telegram等方式保持与社区的联系，更新项目进展，解答投资者的疑问，并与社区互动。
+
+　
+
+-------------------------------------------------------------------------------------------------------
+
+　
+
+#### 用户风险：
+- 项目方在ICO结束并分发完代币后，选择不在交易所上市，甚至可能跑路，消失或停止开发项目。
+- 这种行为被称为**“拉地盘”**（Exit Scam），它是区块链和加密货币领域一个常见的风险，特别是在监管不完善或项目缺乏透明度的情况下。
+- 这种情况的发生通常会让投资者陷入极大的损失，因为他们的代币可能无法在任何交易所进行兑换或交易，且项目本身也不会继续开发或提供任何有价值的服务。
+
+#### 如何避免：
+- 仔细研究项目方背景和团队：是否能追溯到现实中的社交媒体和LinkedIn资料。
+- 团队的社交媒体活跃度：不是匿名或不透明的团队。
+- 审查白皮书（Whitepaper）和技术细节：缺乏详细的技术描述或过于模糊，可能存在风险。
+- 参与项目的KYC/AML审核：没有进行任何KYC/AML审核，并且没有公开透明的身份信息，那项目的风险很高。
+- 查看项目的资金管理：一些项目方可能会将募集的资金存入多重签名钱包，确保没有一个单一实体可以随意支配这些资金。这有助于避免“跑路”行为。
+- 代币流通和上市情况：提前公告代币的上市计划。
