--- a/others/001 ICO浅析.md
+++ b/others/001 ICO浅析.md
@@ -97,3 +97,13 @@
 - 参与项目的KYC/AML审核：没有进行任何KYC/AML审核，并且没有公开透明的身份信息，那项目的风险很高。
 - 查看项目的资金管理：一些项目方可能会将募集的资金存入多重签名钱包，确保没有一个单一实体可以随意支配这些资金。这有助于避免“跑路”行为。
 - 代币流通和上市情况：提前公告代币的上市计划。
+
+　
+
+-------------------------------------------------------------------------------------------------------
+
+　
+
+### 其他：
+- 常见的代币发行融资方式：ICO、IDO、IEO
+- Airdrop（空投）、Liquidity Mining（流动性挖矿） 和 Yield Farming（收益农场），是 营销手段 和 社区激励机制，而不是直接的融资方式。
