--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -148,7 +148,10 @@ function <function name>(<parameter types>) {internal|external|public|private} [
 
 #### 函数可见性：
 - public：内部和外部均可见。
-- 当一个状态变量被声明为public时，编译器会自动生成一个同名的getter函数。
+- 当一个状态变量被声明为public时，编译器会自动生成一个同名的getter函数，这一定非常常见(在区块链浏览器，随便找一个知名合约，查看试试)。
+![](../images/etherscan_uni_00.png "")
+![](../images/etherscan_uni_01.png "")
+- 与其他传统编程语言不同的是，合约声明了public变量，外界也无非直接对它进行修改。
 ```
 // 声明一个mapping
 mapping(address => mapping(address => address)) public getPair;
