--- a/courses/045 透明代理模式.md
+++ b/courses/045 透明代理模式.md
@@ -225,3 +225,12 @@ contract LogicV2 is LogicV1 {
 - 透明代理模式的缺点：每次用户调用到```fallback()```时，都需要判断"不许是管理员"，这会消耗更多的gas。
 - 适用：对安全性和权限控制要求高的复杂项目（如 DeFi、DAO），能够清晰分离用户和管理员的权限。
 
+
+　
+#### 历史背景
+- 透明代理模式是在智能合约社区中较早发展出来的一种模式，旨在解决合约部署后无法更改的问题。
+- 它允许合约逻辑在不改变合约地址的情况下进行升级。
+- 何为"透明"：对于外部观察者来说，代理合约看起来就像是实现了所有功能的合约本身，所有的函数调用和事件都像是直接从代理合约发出的一样。
+- 随着智能合约应用的发展，社区意识到需要一种更简单、更标准的方式来处理合约升级问题。因此提出了UUPS，它将升级逻辑内置到实现合约中，简化了升级流程。
+
+
