--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -82,7 +82,7 @@
 　
 
 #### 枚举类型细说：
-- 底层类型是 uint（无符号整数）所以，即使显性的赋值，也不得小于0
+- 底层类型是 uint（无符号整数），不能显性的赋值，默认从0开始。
 - 如果枚举的成员数量在256个以内，则底层类型为uint8
 - 如果枚举的成员数量超过256个，则底层类型为uint256(即，uint)
 - 如果把枚举当作返回值，则类型填枚举名(否则，编译错误)
@@ -90,11 +90,10 @@
 - 枚举定义中，末尾的梅花括号不能携带"分号"，必须为空(否则，编译错误)
 ```
     enum Status {
-        Invalid = -1,    // 编译错误: 值必须是无符号整数
-        InIdle,          // 默认值为0
+        InIdle,          // 0
         InProgress,      // 1
-        InPause = 5,     // 5
-        InEnd            // 6
+        InPause,         // 2
+        InEnd            // 3
     }
 
     function getStatus() public view returns (Status) {
