--- a/courses/004 异常.md
+++ b/courses/004 异常.md
@@ -6,7 +6,10 @@
 - 适用：业务常规检查判断(通常用于验证输入、权限检查等)
 - 控制台的异常定位，比较明显
 - ```require(amount > 0, "Amount must be greater than zero");```
+- ```ProviderError: Error: VM Exception while processing transaction: reverted with reason string 'Amount must be greater than zero'```
 - ```require(amount > 0);```
+- ```ProviderError: Error: Transaction reverted without a reason string```
+
 
 　
 
