--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -109,6 +109,7 @@ function fooC() public {
     代码类型：属性
     返回类型: uint
     说明: 当前区块的时间戳，以秒为单位（自Unix纪元以来的时间）。
+    注意：需要新产生区块，才会更新block.timestamp，否则会停滞不动(见示例：TestTimestamp.sol)。
 
     block.difficulty
     代码类型：属性
@@ -137,3 +138,32 @@ function fooC() public {
     
 
 
+
+#### 什么情况下，才会产生新区块
+- 当一笔交易被矿工打包进区块并添加到区块链中时，就会产生一个新的区块。
+- 包含以下典型行为：
+##### 发送交易
+```
+普通转账：从一个账户向另一个账户发送以太币（ETH）。
+部署智能合约：将新的智能合约部署到区块链上。
+```
+##### 创建新账户
+```
+通过交易创建一个新的以太坊账户。
+```
+##### 更新智能合约状态
+```
+修改智能合约中的存储变量或状态。
+```
+##### 触发事件
+```
+在智能合约中触发事件（Event），这些事件可以被监听和记录在区块链上。
+```
+##### 链上治理操作
+```
+参与链上治理活动，例如投票、提案等。
+```
+##### 其他链上操作
+```
+执行其他需要改变区块链状态的操作，如注册域名、发布内容等。
+```
