--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -110,6 +110,8 @@ function fooC() public {
     返回类型: uint
     说明: 当前区块的时间戳，以秒为单位（自Unix纪元以来的时间）。
     注意：需要新产生区块，才会更新block.timestamp，否则会停滞不动(见示例：TestTimestamp.sol)。
+    注意：在新产生区块的前提下，线上测试链，会更新block.timestamp(趋近于真实时间戳)。
+    注意：在新产生区块的前提下，hardhat-node测试链，会更新block.timestamp(但，默认不会趋近于真实时间戳，可以编写代码强制趋近)。
 
     block.difficulty
     代码类型：属性
