--- a/courses/001 命名规则相关.md
+++ b/courses/001 命名规则相关.md
@@ -46,10 +46,13 @@ uint256 constant MAX_SUPPLY = 1000000;
 
 　
 
-#### 关于"合约中变量命名"
-- 参见OpenZepplin，成员变量，前缀统一加上下划线_
+#### 关于"合约中变量命名"(看个人习惯，或项目风格)
 ```
+// 在OpenZepplin中，成员变量，前缀统一加下划线 "_"
 uint256 private _totalSupply = 0;
+
+// 在Uniswap中，成员变量，前缀没有加下划线 "_"
+uint public totalSupply;
 ```
 
 　
