--- a/courses/001 通行证与编译器版本.md
+++ b/courses/001 通行证与编译器版本.md
@@ -50,6 +50,10 @@
 **指定编译器版本的指令**
 ```
 pragma solidity 0.8.0;                  精确版本
+pragma solidity =0.8.0;                 精确版本
+```
+```
+pragma solidity >0.8.0;                 版本范围
 ```
 ```
 pragma solidity >=0.8.0 <0.9.0;         版本范围
