--- a/courses/053 Gas介绍.md
+++ b/courses/053 Gas介绍.md
@@ -16,17 +16,17 @@
 
 　
 
-#### 优化技巧统计：
-- ★★★★★ 01.使用合理的数据类型
-- ★★★★★ 02.减少状态变量的读写
-- ★★★★☆ 03.优化循环
-- ★★★☆☆ 04.使用事件，而非状态变量
-- ★★★☆☆ 05.减少函数调用次数
-- ★★★☆☆ 06.避免创建不必要的变量
-- ★★★★☆ 07.使用unchecked代码块
-- ★★★★☆ 08.优化条件判断顺序
-- ★★★★★ 09.使用constant和immutable
-- ★★★★☆ 10.使用库函数Library
-- ★★★☆☆ 11.减少依赖外部合约调用
-- ★★☆☆☆ 12.使用高效的哈希和加密算法
-- ★★★☆☆ 13.减少复杂计算和加权平均
+## 优化技巧统计：
+### ★★★★★ 01.使用合理的数据类型
+### ★★★★★ 02.减少状态变量的读写
+### ★★★★☆ 03.优化循环
+### ★★★☆☆ 04.使用事件，而非状态变量
+### ★★★☆☆ 05.减少函数调用次数
+### ★★★☆☆ 06.避免创建不必要的变量
+### ★★★★☆ 07.使用unchecked代码块
+### ★★★★☆ 08.优化条件判断顺序
+### ★★★★★ 09.使用constant和immutable
+### ★★★★☆ 10.使用库函数Library
+### ★★★☆☆ 11.减少依赖外部合约调用
+### ★★☆☆☆ 12.使用高效的哈希和加密算法
+### ★★★☆☆ 13.减少复杂计算和加权平均
