--- a/courses/009 发送以太币.md
+++ b/courses/009 发送以太币.md
@@ -3,6 +3,7 @@
 #### transfer()
 - 只能用于发送以太币，不能设置 msg.data，这个方法不允许附带数据（msg.data），使用 transfer() 时，msg.data 是空的。
 - 使用时，gas 限制是2300。
+- 如果目标合约没有定义标准的```receive 或 fallback```，那么，以太币不会发出去，交易会失败
 - 如果转账失败，会自动revert（即，回滚交易）
 - 返回值：void
 - 适用：简单的以太币转账，需要自动回滚失败，无需处理复杂的错误情况。
@@ -18,6 +19,7 @@ function transferETH(address payable _to, uint256 amount) external payable{
 #### send()
 - 只能用于发送以太币，不能设置 msg.data，这个方法不允许附带数据（msg.data），使用 transfer() 时，msg.data 是空的。
 - 使用时，gas 限制是2300。
+- 如果目标合约没有定义标准的```receive 或 fallback```，那么，以太币不会发出去，交易会失败
 - 如果转账失败，不会自动revert（即，不会回滚交易）
 - 返回值：bool，代表成功与否
 - 适用：希望在转账失败时采取某些操作的场景。
@@ -37,6 +39,7 @@ function sendETH(address payable _to, uint256 amount) external payable{
 #### call()
 - 可以用于发送以太币，且能设置 msg.data，也可以调用目标合约的其他方法(后面详细说)
 - 使用时，gas 没有限制。
+- 如果目标合约没有定义标准的```receive 或 fallback```，那么，以太币不会发出去，交易会失败
 - 如果转账失败，不会自动revert（即，不会回滚交易）
 - 返回值：(bool, bytes)，代表成功与否，以及目标函数的返回值
 - 适用：处理复杂情况时，调用目标合约的特定函数或传递数据。（最为提倡，大部分人使用）
