--- a/courses/008 接收以太币.md
+++ b/courses/008 接收以太币.md
@@ -36,6 +36,7 @@ Ether = 10^18 Wei
 #### 普通函数
 - 函数体使用payable修饰
 - 即使，合约内没有定义receive或fallback，也能接收以太币
+- 关于调用：使用普通函数进行转账时候，即使目标合约定义了标准的```receive 或 fallback```，也不会触发它们。
 - 示例：```function foo(uint256 _value) public payable```
 
 
