--- a/courses/002 变量与函数02_存储位置.md
+++ b/courses/002 变量与函数02_存储位置.md
@@ -4,7 +4,7 @@
 * 存储位置：链上。
 * 数据持久化，存在于整个合约生命周期期间。
 * 可以直接修改。
-* 访问成本较高，因为涉及到区块链状态的变化。
+* gas操作成本较高，因为涉及到区块链状态的变化。
 #### 其他:
 * mapping 无法被声明为 memory 或 calldata 类型，只能存在于 storage 中。
 #### 示例:
@@ -36,7 +36,7 @@ contract Example {
 * 存储位置：合约内存中。
 * 数据仅存在于当前函数调用期间。
 * 允许对数据进行修改。
-* 相对于 storage 更加高效，因为它不涉及区块链状态的变化。
+* gas操作成本相对于 storage 更便宜，因为不涉及到区块链状态的变化。
 #### 其他：
 * 当函数参数是引用类型（如，string、数组或struct）时，它们必须使用memory(或，calldata)关键字进行修饰。
 #### 示例:
@@ -70,6 +70,7 @@ function example() public pure {
 * 数据是只读的，不能被修改。
 * 不复制到内存中，因此节省 gas。
 * 仅限于函数参数，不能用于声明局部变量或状态变量。
+* 在操作复杂数据的前提下，gas操作是最为廉价的。
 #### 示例：
 ```
 function example(uint[] calldata arr) public pure returns (uint sum) {
@@ -94,6 +95,7 @@ function example(Person calldata person) public pure {
 * 快速访问，但有大小限制。
 * 自动管理，开发者无需显式指定。
 * 仅存在于当前函数调用期间。
+* gas操作通常是最便宜的，因为它们不需要与持久性存储进行交互。
 #### 其他：
 * 每个函数调用的栈深度有限（1024 个槽位），所以存储在栈中的变量不能占用过多空间。
 * 当函数参数(或，局部变量)，它们是复杂类型(即，string、数组或struct)，它们的大小是未知或很大的，也就不适合存储在栈（stack）中。
