--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -174,7 +174,9 @@ function getPair(address tokenA, address tokenB) external view returns (address 
 #### 函数权限(功能关键字)：
 - payable：可支付(必须是以太币)
 - pure：纯净(不读不写)
-- view：纯读(注意，使用emit 事件，也认定为修改了合约状态，即最少使用view，而不是pure)
+- view：纯读
+* 注意，使用emit 事件，也认定为修改了合约状态，即最少使用view，而不是pure
+* 注意，address.call/delegatecall，也认定为可能修改了合约状态，即最少使用view，而不是pure
 - 空：(没支付、有写操作)
 
 　
