--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -81,6 +81,15 @@
 
 　
 
+**TWAP** 
+- 全称 Time Weighted Average Price：时间加权平均价格
+- 是一种用于计算特定资产在一定时间段内的平均价格的方法。
+- 在一个指定的时间段内，按照预设的时间间隔进行多次小量交易，并最终根据这些交易的价格计算出一个平均值。
+- 其目的是使交易对市场影响减小，同时也提供一个较低的平均成交价格，从而达到减小交易成本的目的。
+- 计算公式为：TWAP = (TP1 + TP2 + ... + TPn) / n，其中TP1是第一个时间点的价格，n是时间点的总数。
+
+　
+
 **Oracles** 
 - 预言机：一种外部数据源，它们为智能合约提供外部数据输入的能力。
 - 由于区块链本身是封闭的环境，智能合约无法直接访问外部数据，比如当前的天气状况、汇率、股票价格等现实世界的数据。
