--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -10,6 +10,7 @@
 **EVM**
 - 全称 Ethereum Virtual Machine：以太坊虚拟机
 - 它是一个图灵完备的虚拟计算机，能够执行以太坊智能合约。
+- 每当你在以太坊（或其他 EVM 链）上“做”任何事情时，运行 EVM 软件的不同节点，会在其中启动一台虚拟机器（称为虚拟机）并运行机器级代码。
 
 　
 
