--- a/courses/017 哈希函数.md
+++ b/courses/017 哈希函数.md
@@ -19,7 +19,7 @@
 
 #### keccak256函数：
 - keccak256 是一种广泛使用的加密散列函数，用于生成256位的哈希值。
-- 256位(二进制位)，也就是64个十六进制数。
+- 返回值：256位(二进制位)，也就是64个十六进制数，32字节。
 - 如，```0x2cf24dba5fb0a30e26e83b2ac5b9e29e1b170ed2e82a3fa3d61cd77b2c2e1e2c```
 
 #### keccak256函数的用途：
