--- a/courses/018 函数选择器.md
+++ b/courses/018 函数选择器.md
@@ -66,6 +66,8 @@ bytes4 data = this.functionName.selector;
 　
 
 #### 其他：
+- 函数选择器冲突：指的是一个合约中，存在两个或以上的函数，具备相同的函数选择器。
+- 举例子：两个函数的名称与参数完全一致，但返回值不一致。那么，它们也算作是冲突！
 - 使用selector进行调用目标合约的函数(详见：016 abi编码相关.md)
 
 #### 三种方式如下：
