--- a/courses/018 函数选择器.md
+++ b/courses/018 函数选择器.md
@@ -66,8 +66,6 @@ bytes4 data = this.functionName.selector;
 　
 
 #### 其他：
-- 函数选择器冲突：指的是一个合约中，存在两个或以上的函数，具备相同的函数选择器。
-- 举例子：两个函数的名称与参数完全一致，但返回值不一致。那么，它们也算作是冲突！
 - 使用selector进行调用目标合约的函数(详见：016 abi编码相关.md)
 
 #### 三种方式如下：
@@ -87,6 +85,34 @@ bytes4 memory data = bytes4(keccak256("doSomething(uint256,bool)"))
 (bool success1, bytes memory data1) = address(targetContract).call(abi.encodeWithSelector(data, 123, true));
 ```
 
+#### 函数选择器冲突：
+- 函数选择器冲突：指的是一个合约中，存在两个或以上的函数，具备相同的函数选择器。
+- 举例子：两个函数的名称与参数完全一致，但返回值不一致。那么，它们也算作是冲突！
+```
+contract Example {
+    function getNumber() public pure returns (uint256) {
+        return 42;
+    }
+
+    function getNumber() public pure returns (int256) {
+        return 42;
+    }
+}
+```
+
+#### 接口的 interfaceId
+- 一个接口中，把所有函数的函数选择器进行编码后得到的bytes4。
+- 过程大概如下：
+```
+bytes4 interfaceId = bytes4(keccak256(abi.encodePacked(
+    bytes4(keccak256(bytes(signature1))),
+    bytes4(keccak256(bytes(signature2))),
+    // ...
+    bytes4(keccak256(bytes(signatureN)))
+)));
+
+// 其中 signature1, signature2, …, signatureN 是接口中每个函数的签名，按照字典顺序排列。
+```
 　
 
 #### 编程范例
