--- a/courses/042 合约中的存储槽.md
+++ b/courses/042 合约中的存储槽.md
@@ -176,6 +176,11 @@ contract Proxy_3 {
 ```
 
 　
+#### 其他：
+- 如果使用```immutable```声明成员变量，那么该变量会，在部署时存储在合约字节码中，而不是运行时存储（storage）中！！
+- 如果使用```constant```声明成员变量，那么该变量会，在编译时就已确定，并直接嵌入到合约的字节码中，而不是存储在运行时存储（storage）中！
+　
+
 
 #### 总结：
 - 读取与更改任意指定存储槽的值，不依赖于定义好的变量(即，不定义变量，仍然代表可以操控存储的值)。
