--- a/courses/045 透明代理模式.md
+++ b/courses/045 透明代理模式.md
@@ -6,6 +6,7 @@
 - 4.此时，当管理员向"代理合约"发起```foo(address)```调用(使用低级调用方式)时，会直接错误的调用到"代理合约的升级函数"，那么，结果就是，代理合约升级为了一个"黑洞合约"，后果完全不可设想。
 - 5.这种"函数选择器一致"导致的严重后果，称之为"代理模式下的函数选择器冲突"。
 - 6.解决这种冲突的方式有两个：透明代理(Transparent Proxy Standard) 与 通用可升级代理(Universal Upgradeable Proxy Standard)。
+- 7.透明代理模式 与 通用可升级代理模式，它们的代理合约本体，都是使用 EIP-1967 标准的存储槽来存储代理的元数据（如管理员和逻辑合约地址），而逻辑合约则管理实际的存储。
 
 　
 
