--- a/courses/017 哈希函数.md
+++ b/courses/017 哈希函数.md
@@ -2,6 +2,7 @@
 #### hash的概念：
 - 哈希（hash）是一种常用的加密技术，主要用于确保数据的完整性和安全性。
 - 哈希函数将输入数据（无论大小）转换为固定长度的字符串，通常用于区块链中的多种场景。
+- 记忆理解：哈希值是数据的指纹。
 
 #### 主要特性：
 - 数据完整性：哈希函数可以用于验证数据是否未被篡改。通过对数据进行哈希，用户可以轻松比较哈希值以确认数据的一致性。
