--- a/courses/018 函数选择器.md
+++ b/courses/018 函数选择器.md
@@ -68,7 +68,7 @@ bytes4 data = this.functionName.selector;
 #### 其他：
 - 使用selector进行调用目标合约的函数(详见：016 abi编码相关.md)
 
-#### 三种方式如下：
+#### 四种方式如下：
 ```
 // 使用[函数签名]和[参数编码数据]，调用目标函数
 bytes memory data = abi.encodeWithSignature("doSomething(uint256,bool)",123,true);
@@ -83,6 +83,11 @@ bytes4 memory data = this.functionName.selector;
 // 使用[函数选择器]和[参数编码数据]，调用目标函数
 bytes4 memory data = bytes4(keccak256("doSomething(uint256,bool)"))
 (bool success1, bytes memory data1) = address(targetContract).call(abi.encodeWithSelector(data, 123, true));
+
+// 使用，在doSomething函数内，使用msg.sig获取函数选择器
+function doSomething(uint256 value, bool flag) {
+    bytes4 selector = msg.sig;
+}
 ```
 
 #### 函数选择器冲突：
