--- a/courses/018 函数选择器.md
+++ b/courses/018 函数选择器.md
@@ -86,6 +86,7 @@ bytes4 memory data = bytes4(keccak256("doSomething(uint256,bool)"))
 ```
 ```
 // 使用，在doSomething函数内，使用msg.sig获取函数选择器
+// 特例：当fallback函数，作为"当调用一个不存在的函数"时，此时msg.sig指向的是"那个不存在的函数的选择器"
 function doSomething(uint256 value, bool flag) {
     bytes4 selector = msg.sig;
 }
