--- a/courses/047 信标代理模式.md
+++ b/courses/047 信标代理模式.md
@@ -158,3 +158,8 @@ async function main() {
   console.log("Beacon upgraded to LogicV2");
 }
 ```
+
+　
+
+#### 说明：
+- 信标代理的实现：https://github.com/OpenZeppelin/openzeppelin-contracts/tree/master/contracts/proxy/beacon
