--- a/courses/048 钻石代理模式.md
+++ b/courses/048 钻石代理模式.md
@@ -65,3 +65,4 @@ contract Storage {
 - 以上代码并没有进行存储槽冲突处理
 - 在官方的实现案例中，为了解决存储槽冲突，代理合约与逻辑模块合约，都没有使用"低位存储槽"，而使用的是"高位存储槽"。
 - 这里的示例代码，只是简单的概括一下基础。
+- 钻石代理的实现：https://github.com/mudgen/diamond-3
