--- a/courses/047 信标代理模式.md
+++ b/courses/047 信标代理模式.md
@@ -1,7 +1,7 @@
 #### 概念：
 - 在UniswapV2中，所有的交易对(称为，交易池子)，都存储在一个合约中，称为，交易池子合约。
 - 随着生态的发展，有很多交易池子产生，会面临一个问题：当交易池子合约产生了问题，希望更改迭代，怎么办？
-- 在UniswapV3中，使用了"信标代理模式"，来解决这个问题。
+- 在UniswapV3中，使用了类似于"信标代理"的模式，来解决这个问题。
 - 每一个交易池子合约，都是一个代理合约，它们同时指向一个逻辑合约，这样只需要"每一个代理合约"，更改逻辑合约地址，即可。
 - 引入"信标合约"，来存储代理合约所指向的逻辑合约地址，这样当需要更新协议逻辑时，只需要更新信标指向的合约地址，而不需要迁移池合约的地址或重新配置整个系统。
 
@@ -162,4 +162,9 @@ async function main() {
 　
 
 #### 说明：
+- 部署逻辑合约 LogicV1
+- 部署信标合约 UpgradeableBeacon，并将逻辑合约地址传递给信标合约。
+- 部署若干个代理合约（BeaconProxy1、BeaconProxy2、BeaconProxy3），并将信标合约地址传递给每个代理合约。
+- 代理合约的存储是独立的，逻辑合约只包含代码逻辑。
+- 升级逻辑合约只是更新了代码逻辑，代理合约仍然通过 delegatecall 调用新的逻辑合约，但数据存储在自己的存储空间中。
 - 信标代理的实现：https://github.com/OpenZeppelin/openzeppelin-contracts/tree/master/contracts/proxy/beacon
