--- a/others/各种链简述.md
+++ b/others/各种链简述.md
@@ -6,30 +6,47 @@
 比特币（Bitcoin）
     第一个区块链，专注于点对点支付。
     使用PoW（工作量证明）共识机制。
+    由中本聪（Satoshi Nakamoto）在 2008 年提出，名称由“Bit”（计算机数据的最小单位）和“Coin”（硬币）组成，寓意一种数字化的货币。
 
 以太坊（Ethereum）
     支持智能合约和去中心化应用（DApps）。
     使用PoS（权益证明）共识机制。
+    由 Vitalik Buterin 在 2013 年提出，名称来源于“Ether”（以太），一种物理学中假想的物质，象征着以太坊作为去中心化应用的“基础物质”。    
 
 币安智能链（Binance Smart Chain, BSC）
     兼容以太坊虚拟机（EVM），支持高性能交易。
     使用PoSA（权益证明权威）共识机制。
+    由币安（Binance）交易所开发，名称直接来源于币安交易所，强调其智能合约功能。
 
 索拉纳（Solana，SOL）
     高性能区块链，支持高吞吐量和低费用。
     使用PoH（历史证明）和PoS混合共识机制。
+    由 Anatoly Yakovenko 在 2017 年提出，称来源于美国加州的一个海滨小镇 Solana Beach，创始人在此生活并受到启发。
 
 卡尔达诺（Cardano，ADA）
     强调安全性和可扩展性。
     使用PoS共识机制（Ouroboros协议）。    
+    由 Charles Hoskinson（以太坊联合创始人之一）领导开发，名称来源于意大利数学家 Gerolamo Cardano，象征着项目对科学和学术的重视。
 
 波卡（Polkadot，DOT）
     支持多链互操作性。
     使用NPoS（提名权益证明）共识机制。
+    由 Gavin Wood（以太坊联合创始人之一）提出，名称来源于“Polka Dot”（波点图案），象征着多链互联的愿景。
 
 雪崩（Avalanche，AVAX）
     支持快速交易和子网创建。
     使用Snow共识协议。
+    由 Emin Gün Sirer 领导的团队开发，名称寓意网络的快速共识机制，像雪崩一样迅速且不可阻挡。
+
+宇宙（Cosmos，ATOM）
+    支持多链互联和自定义区块链开发。
+    使用 Tendermint 共识引擎。
+    由 Jae Kwon 和 Ethan Buchman 领导的团队开发，名称寓意构建一个互联的区块链宇宙，让不同的区块链能够相互通信和协作。
+
+波场（Tron，TRX）
+    支持高吞吐量的去中心化应用（DApps）和智能合约。
+    使用委托权益证明（DPoS）共识机制。
+    由孙宇晨（Justin Sun）领导的团队开发，名称寓意通过区块链技术实现全球范围内的内容自由传播和价值转移。    
 ```
 
 　
@@ -48,18 +65,28 @@
 ```
 Optimistic Rollups（Optimism、Arbitrum）
     默认假设交易有效，通过欺诈证明解决争议。
+    由以太坊社区提出，名称中的“Optimistic”表示乐观假设，即默认交易有效，只有在被质疑时才验证。
+    Optimism：名称直接来源于其技术基础，强调对未来的乐观态度。
+    Arbitrum：名称来源于“Arbitration”（仲裁），强调其通过仲裁机制解决争议的设计。
 
 ZK-Rollups（zkSync、StarkNet）    
     使用零知识证明（ZKP）验证交易，安全性高。
+    由以太坊社区提出，名称中的“ZK”代表“Zero-Knowledge”（零知识证明），强调其隐私保护特性。
+    zkSync：名称中的“zk”代表零知识证明，“Sync”表示同步，寓意高效的交易处理。
+    StarkNet：名称中的“Stark”来源于公司名，同时寓意强大的性能和安全性。
 
 State Channels（比特币的Lightning Network、以太坊的Raiden Network）
     交易在链下进行，最终结果提交到链上。
+    由 Joseph Poon 和 Thaddeus Dryja 在 2015 年提出，名称寓意交易速度像闪电一样快。
 
 Plasma（OMG Network）
     通过子链处理交易，定期将状态提交到主链。
+    由 Vitalik Buterin 和 Joseph Poon 提出，名称来源于生物学中的“血浆”（Plasma），寓意其作为 Layer 2 的“生命之源”。
 
 Sidechains（Polygon（原Matic Network）、xDai Chain）
     独立运行，但与主链通过桥接交互。
+    由比特币社区提出，名称直接描述了其作为主链的“侧链”功能。
+    Polygon：名称“Polygon”寓意多链互联的生态系统，像多边形一样复杂且多样。
 ```
 
 　
