--- a/courses/029 私钥、公钥、地址.md
+++ b/courses/029 私钥、公钥、地址.md
@@ -18,6 +18,34 @@
 
 　
 
+### 区块链中私钥、公钥和地址的总结对比
+
+| 属性       | 私钥                | 未压缩公钥                     | 压缩公钥               | 地址                |
+|------------|---------------------|--------------------------------|------------------------|---------------------|
+| **定义**   | 随机生成的 256 位数字 | 完整椭圆曲线点 `(x, y)`         | 仅 `x` 坐标 + 前缀      | 未压缩公钥哈希的后 20 字节 |
+| **前缀**   | 无                  | `0x04`                         | `0x02` 或 `0x03`       | 无                  |
+| **内容**   | 随机数              | `x` (32字节) + `y` (32字节)    | `x` (32字节)           | 哈希值的后 20 字节   |
+| **长度**   | 32 字节             | 65 字节                        | 33 字节                | 20 字节             |
+| **二进制位** | 256 位             | 520 位                         | 264 位                 | 160 位              |
+| **十六进制字符** | 64 个          | 130 个                         | 66 个                  | 40 个               |
+
+-------------------------------------------------------------------------------------
+
+### 关键点
+1. **私钥**是核心，必须严格保密。
+2. **公钥**由私钥通过椭圆曲线加密算法生成，分为未压缩和压缩两种格式。
+```
+未压缩公钥：包含完整的椭圆曲线点信息（x 和 y 坐标），确保哈希结果的唯一性和安全性。
+压缩公钥：主要用于存储和传输，因为它更节省空间（33 字节 vs 65 字节）。但在生成地址时，仍然需要将其解压缩为未压缩格式，然后再进行哈希运算。
+```
+3. **地址**由未压缩公钥通过哈希运算生成，是公开的接收标识。
+
+　
+
+-------------------------------------------------------------------------------------
+
+　
+
 #### 私钥 -> 公钥：
 ```
 const privateKey = "你的私钥"; 
