--- a/courses/017 哈希函数.md
+++ b/courses/017 哈希函数.md
@@ -104,5 +104,22 @@ contract StorageLayout {
 
 ```
 
+　
 
+------------------------------------------------------------------------------------
 
+　
+
+| 特性               | MD5                              | SHA-256                         | SHA-3                          |
+|--------------------|----------------------------------|---------------------------------|--------------------------------|
+| **发明时间**       | 1991 年                          | 2001 年                         | 2015 年                        |
+| **设计者**         | Ronald Rivest                   | 美国国家安全局（NSA）           | Guido Bertoni 等（Keccak 团队）|
+| **输出长度**       | 128 位（16 字节）                | 256 位（32 字节）               | 224、256、384、512 位          |
+| **算法结构**       | Merkle-Damgård                   | Merkle-Damgård                  | 海绵结构（Sponge Construction）|
+| **性能**           | 非常高效                         | 高效，广泛优化                  | 在某些硬件上更快               |
+| **抗碰撞性**       | 弱，易受碰撞攻击                 | 强，目前无有效碰撞攻击          | 强，目前无有效碰撞攻击         |
+| **抗长度扩展攻击** | 不支持                           | 不支持                          | 支持                           |
+| **被破解情况**     | **已破解**：<br>- 2004 年，王小云团队提出高效碰撞攻击方法。<br>- 2008 年，研究人员利用 MD5 碰撞伪造 SSL 证书。 | **未破解**：<br>- 目前无公开的有效碰撞攻击。<br>- 被认为在可预见的未来是安全的。 | **未破解**：<br>- 目前无公开的有效碰撞攻击。<br>- 设计上对已知攻击具有抵抗力。 |
+| **安全性**         | 不安全，已被弃用                 | 安全，广泛使用                  | 安全，新一代哈希函数           |
+| **应用场景**       | 非安全性场景（如数据校验）       | 数字签名、区块链、数据完整性校验| 数字签名、密钥派生、随机数生成 |
+| **当前状态**       | 已弃用                           | 广泛使用，推荐                  | 安全性高，但采用率较低         |
