--- a/courses/029 私钥、公钥、地址.md
+++ b/courses/029 私钥、公钥、地址.md
@@ -1,16 +1,19 @@
 
 
 #### 私钥：
-- 一个随机生成的长字符串，通常以16进制表示。它是用户控制其加密货币资产的唯一凭证。
+- 一个随机生成的长字符串，通常以16进制表示。它是用户控制其加密货币资产的唯一凭证
 - 拥有私钥就能签署交易，因此必须严格保管，切勿泄露。
+- 相当于银行卡密码，用于授权交易。
 
 #### 公钥：
 - 公钥是由私钥通过椭圆曲线加密算法生成的。它是一个长字符串，通常用于生成地址。
 - 公钥可以公开给他人，用户可以通过公钥验证交易的签名，但无法从公钥推导出私钥。
+- 相当于银行卡账号，用于生成地址。
 
 #### 地址：
 - 地址是通过对公钥进行哈希处理得到的简短字符串，通常以“0x”开头。
-- 它用于接收和发送加密货币，相当于银行账户的号码。地址是公开的，可以安全地分享给他人以便接收资金。
+- 它用于接收和发送加密货币。地址是公开的，可以安全地分享给他人以便接收资金。
+- 相当于银行卡的账户别名(或收款二维码)，用于接收资金。
 
 　
 
