--- a/others/002 BTC交易浅析.md
+++ b/others/002 BTC交易浅析.md
@@ -42,6 +42,11 @@
             优先选择手续费高的交易，直到区块容量接近上限。
         创建区块：将选中的足量交易打包成一个候选区块，区块头中包含前一个区块的哈希值、默克尔根、时间戳等信息。
         工作量证明（PoW）：矿工不断调整Nonce值，计算区块头的哈希值，直到找到满足当前难度目标的哈希值。
+            区块头 = 版本号 + 前一个区块的哈希值 + Merkle根 + 时间戳 + 难度目标 + Nonce
+            Hash = SHA256(SHA256(区块头))
+            Hash <= Target
+            Target值：比特币网络每产生 2016 个区块（大约两周），会根据过去 2016 个区块的实际生成时间，动态调整 Target 值，以保持平均出块时间在 10 分钟 左右。
+            Target = OldTarget * (过去 2016 个区块的实际生成时间)/(2016 个区块 × 10 分钟)            
         挖出区块：当某个矿工成功找到有效的Nonce值后，他会将这个新区块广播到网络。
 ```
 
@@ -76,5 +81,6 @@
 ```
 矿工的奖励：
     成功挖出新区块的矿工会获得区块奖励（新生成的比特币）和交易手续费（如果有）。
+    新生成的比特币：区块奖励初始为 50 BTC，每 210,000 个区块（约 4 年）减半一次。截至 2023 年，区块奖励为 6.25 BTC。
 ```
 
