--- a/others/003 ETH交易浅析.md
+++ b/others/003 ETH交易浅析.md
@@ -33,22 +33,27 @@
         检查账户余额：确认发送者地址有足够的以太币支付转账金额和 Gas 费用。
         检查 Nonce：确认交易的 Nonce 值与发送者地址的当前 Nonce 匹配（防止重放攻击）。
         检查 Gas Limit 和 Gas Price：确认 Gas Limit 和 Gas Price 符合网络规则。
-    如果交易有效，节点会将其放入本地内存池（mempool），等待矿工打包。
+    如果交易有效，节点会将其放入本地内存池（mempool），等待验证者打包。
 ```
 
 #### 挖矿
 ```
-矿工的工作：
-    矿工从内存池中收集交易，并尝试将其打包进新区块。
+验证者的工作：
+    验证者从内存池中收集交易，并尝试将其打包进新区块。
     交易选择：
-        矿工优先选择 Gas Price 较高的交易，以最大化收益。
-        矿工还会考虑交易的 Gas Limit，确保区块的 Gas 总量不超过区块 Gas 上限（目前约为 3000 万 Gas）。
+        验证者优先选择 Gas Price 较高的交易，以最大化收益。
+        验证者还会考虑交易的 Gas Limit，确保区块的 Gas 总量不超过区块 Gas 上限（目前约为 3000 万 Gas）。
     创建候选区块：
-        矿工将选中的交易打包成一个候选区块。
+        验证者将选中的交易打包成一个候选区块。
         区块中包含区块头（包含前一个区块的哈希、时间戳、Nonce 等）和交易列表。
     工作量证明（PoW）或权益证明（PoS）：
         在以太坊 2.0 之前，矿工通过 PoW 机制计算区块头的哈希值，直到找到满足难度目标的 Nonce。
+            暂且认为与BTC类似于吧(毕竟不是做公链的，先不了解)
         在以太坊 2.0 之后，矿工被验证者取代，验证者通过 PoS 机制提议和验证新区块。
+            验证者：质押32个ETH的用户，同时运行以太坊全节点客户端。
+            区块提议：每个 epoch（约 6.4 分钟，包含 32 个 slot）中，系统随机选择一个验证者作为区块提议者，负责打包交易(Gas Price 从高到低)并生成新区块。
+            区块验证：每个 slot（12 秒）中，系统随机选择一个委员会（Committee，大约为128个验证者）来验证区块。
+            共识机制：使用 Casper FFG（Friendly Finality Gadget） 和 LMD-GHOST（Latest Message Driven Greediest Heaviest Observed Subtree） 作为共识算法。            
 ```
 
 #### 区块广播
@@ -85,9 +90,9 @@
 
 #### 奖励分配
 ```
-矿工/验证者的奖励：
-    区块奖励：矿工（或验证者）获得新生成的以太币作为区块奖励。
-    Gas 费用：矿工（或验证者）获得交易中支付的 Gas 费用。
+验证者的奖励：
+    区块奖励：验证者获得新生成的以太币作为区块奖励(当前约为 2 ETH)。
+    Gas 费用：验证者获得交易中累积支付的 Gas 费用。
     叔块奖励（PoW）：在以太坊 PoW 机制中，矿工还可能获得叔块奖励（如果他们的区块未被包含在主链中，但被后续区块引用）。
 ```
 
