--- a/courses/042 合约中的存储槽.md
+++ b/courses/042 合约中的存储槽.md
@@ -179,6 +179,8 @@ contract Proxy_3 {
 #### 其他：
 - 如果使用```immutable```声明成员变量，那么该变量会，在部署时存储在合约字节码中，而不是运行时存储（storage）中！！
 - 如果使用```constant```声明成员变量，那么该变量会，在编译时就已确定，并直接嵌入到合约的字节码中，而不是存储在运行时存储（storage）中！
+- 如果声明```mapping```类型的成员变量，那么该变量不会占用存储槽！
+- 如果声明```struct```类型的成员变量，那么该变量会占用存储槽，按照它内部的变量顺序！
 　
 
 
