--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -103,7 +103,7 @@ function fooC() public {
     block.number
     代码类型：属性
     返回类型: uint
-    说明: 当前区块的高度（区块编号）。
+    说明: 当前区块的高度（也叫，区块编号）。
 
     block.timestamp
     代码类型：属性
