--- a/others/002 BTC交易浅析.md
+++ b/others/002 BTC交易浅析.md
@@ -38,7 +38,7 @@
         收集交易：从内存池中收集交易（包括[张三]转账给[王五]的这笔交易）。
             矿工从内存池中筛选出所有有效的交易。
             按照交易的手续费（单位：sat/byte 或 sat/vByte）从高到低排序。
-            矿工根据区块的大小限制（目前比特币区块大小上限为 1MB 或 4MB，取决于是否使用 SegWit）选择足够数量的交易。
+            矿工根据区块的大小限制（目前比特币区块大小上限为 1MB 或 4MB，取决于是否使用 SegWit）选择足够数量的交易(大概4000个上下)。
             优先选择手续费高的交易，直到区块容量接近上限。
         创建区块：将选中的足量交易打包成一个候选区块，区块头中包含前一个区块的哈希值、默克尔根、时间戳等信息。
         工作量证明（PoW）：矿工不断调整Nonce值，计算区块头的哈希值，直到找到满足当前难度目标的哈希值。
@@ -84,3 +84,26 @@
     新生成的比特币：区块奖励初始为 50 BTC，每 210,000 个区块（约 4 年）减半一次。截至 2023 年，区块奖励为 6.25 BTC。
 ```
 
+　
+
+---------------------------------------------------------------------------------
+
+　
+
+
+### 其他与思考：
+```
+    比特币中的nonce，直译为"随机数"。
+
+    比特币是基于UTX(Unspent Transaction Output，未花费交易输出)，而不是账户。
+
+    双花攻击，必然需要51%攻击才能实施。
+
+    比特币的稀缺性：
+        - 固定总供应量，但不适合做货币
+        - 因为，社会创造的价值在增加，货币量却没有增加，这个明显不符合"货币金融学"。
+
+    量子计算机：
+        - 比特币的有生之年，量子计算机的发展，恐怕无法达到如此境界。
+        - 量子计算机首先威胁的是传统金融体系，因为加密货币的市值占比量，是无法与传统金融的市值比拟的。
+```
