--- a/others/003 ETH交易浅析.md
+++ b/others/003 ETH交易浅析.md
@@ -48,11 +48,17 @@
         区块中包含区块头（包含前一个区块的哈希、时间戳、Nonce 等）和交易列表。
     工作量证明（PoW）或权益证明（PoS）：
         在以太坊 2.0 之前，矿工通过 PoW 机制计算区块头的哈希值，直到找到满足难度目标的 Nonce。
-            暂且认为与BTC类似于吧(毕竟不是做公链的，先不了解)
+            暂且认为与BTC类似于吧(毕竟不是做公链的，先不了解深)
+            Ghost协议：不仅考虑最长链上的区块，还考虑被丢弃的分支（子树）中的区块。
+            Greedy Heaviest Observed Subtree：贪婪最重观察子树。
+            叔叔区块：分叉区块，仍可获得大部分区块奖励。
+            ForkingAttack：分叉后的第一个区块，才能获取奖励(作为叔叔区块)。
         在以太坊 2.0 之后，矿工被验证者取代，验证者通过 PoS 机制提议和验证新区块。
             验证者：质押32个ETH的用户，同时运行以太坊全节点客户端。
             区块提议：每个 epoch（约 6.4 分钟，包含 32 个 slot）中，系统随机选择一个验证者作为区块提议者，负责打包交易(Gas Price 从高到低)并生成新区块。
             区块验证：每个 slot（12 秒）中，系统随机选择一个委员会（Committee，大约为128个验证者）来验证区块。
+            通过 RANDAO 和 VDF 的结合，实现了去中心化、抗操纵且一致的随机数生成机制。
+            所有客户端基于相同的算法和输入，能够计算出相同的随机数，从而确保网络中的随机操作（如选择区块提议者和验证者委员会）在所有节点中保持一致。
             共识机制：使用 Casper FFG（Friendly Finality Gadget） 和 LMD-GHOST（Latest Message Driven Greediest Heaviest Observed Subtree） 作为共识算法。            
 ```
 
@@ -96,3 +102,20 @@
     叔块奖励（PoW）：在以太坊 PoW 机制中，矿工还可能获得叔块奖励（如果他们的区块未被包含在主链中，但被后续区块引用）。
 ```
 
+　
+
+---------------------------------------------------------------------------------
+
+　
+
+
+### 其他与思考：
+```
+    以太坊中的nonce，直译为"交易次数"。
+
+    以太币是基于账户，才能顺利构建智能合约，每一个参与者是相对稳定的身份。
+
+    天然防范"双花攻击(花钱的人，不诚实)"，但带来了"重放攻击(收钱的人，不诚实)"
+
+    防止"重放攻击"，是使用的nonce参与交易签名，故无法实施攻击。
+```
