--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -61,7 +61,7 @@
 　
 
 #### 地址类型细说：
-- 20个字节
+- 20个字节(160位，二进制位)
 - 1个字节 = 由8位（Bits）组成，也就是[2^8-1 = 255]，即从0到255的值。
 - 1个字节 = 2个十六进制数(两个十六进制数，FF => 255)
 - 1个字节 = 3个十进制数(两个十进制数，99 => 99，不足以表达255；3个十进制数，999 => 999 足以表达)
