--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -47,8 +47,14 @@
 　
 
 **EIP**
-- 全称 Ethereum Improvement Proposals：以太坊改进建议
+- 全称 Ethereum Improvement Proposals：以太坊改进提案(或建议)
 - 是以太坊开发者社区提出的改进建议, 是一系列以编号排定的文件, 类似互联网上IETF的RFC。
+
+　
+
+**BIP**
+- 全称 Bitcoin Improvement Proposals：比特币改进提案(或建议)
+- 是比特币开发者社区提出的改进建议, 是一系列以编号排定的文件, 类似互联网上IETF的RFC。
 
 　
 
