--- a/courses/030 数字签名.md
+++ b/courses/030 数字签名.md
@@ -7,6 +7,8 @@
 ##### 拆分签名：通常为了节约链上资源(gas费)，该拆分签名的行为，一般发生在链下(即，应用层)。当然，也可以发生在链上(即，下一个步骤，智能合约层)。
 ##### 发送信息：用户A将原始消息和生成的"独特的数据"一起发送给目标程序（例如智能合约）。
 ##### 验证：目标程序接收到信息后，解析得出用户A的地址来验证签名。如果验证成功，程序就可以确认这是用户A的真实意图，放心地执行相关操作。
+##### 比喻：把消息进行哈希运算，相当于，生成消息的指纹，简称"消息的指纹"。
+##### 比喻：使用私钥对消息的哈希值进行签名，相当于，用发送者的私密印章盖在消息的指纹上，简称"私密印章"。
 ------------------------------------------------------------------------------------------------------------------------
 
 #### 数字签名的主要特征：
