--- a/others/002 BTC交易浅析.md
+++ b/others/002 BTC交易浅析.md
@@ -90,7 +90,7 @@
 
 　
 
-### 交易示例说明
+### 交易示例 - 区块链浏览器的解析处理后生成
 ```
 {
   "txid": "0627052b6f28912f2703066a912ea577f2ce4da4caa5a5fbd8a57286c345c2f2", // 交易的唯一标识（交易哈希值）
@@ -145,6 +145,52 @@
     locktime：
         当值小于5亿，则被视为一个区块高度，即，交易只有在这个指定的区块高度之后才能被确认。
         当值大于等于5亿，则被视为Unix时间戳（自1970年1月1日以来的秒数），即，交易只能在指定的时间点之后被确认。
+
+总览：
+    这笔交易从一个地址（1Cdid9KFAaatwczBwBttQcwXYCpvK8h7FK）发送了1,500,000聪到另一个地址（1GdK9UzpHBzqzX2A9JFP3Di4weBwqgmoQA），并将剩余的8,450,000聪返回给自己。
+    交易费为50,000聪。
+    交易被打包在区块高度277316中，且尚未被花费。        
+```
+
+　
+
+---------------------------------------------------------------------------------
+
+　
+
+### 交易示例 - 比特币协议中的原始交易格式(用于开发、调试和研究协议细节)
+```
+{
+    "version": 1,   // 交易版本号
+    "locktime": 0,  // 交易的时间锁
+    "vin": [
+        {
+            "txid": "7957a35fe64f80d234d76d83a2a8f1a0d8149a41d81de548f0a65a8a999f6f18", // 上一笔交易的哈希值，表示这笔输入引用了该笔交易的输出。
+            "vout": 0, // 上一笔交易中某个具体输出的索引号，此处是第 0 个输出。
+            "scriptSig" : "3045022100884d142d86652a3f47ba4746ec719bbfbd040a570b1deccbb6498c75c4ae24cb02204b9f039ff08df09cbe9f6addac960298cad530a863ea8f53982c09db8f6e3813[ALL] // 签名数据0484ecc0d46f1918b30928fa0e4ed99f16a0fb4fde0735e7ade8416ab9fe423cc5412336376789d172787ec3457eee41c04f4938de5cc17b4a10fa336a8d752adf", // 公钥
+            "sequence": 4294967295 // 序列号，值为 4294967295，表示未启用时间锁。
+        }
+    ],
+    "vout": [
+        {
+            "value": 0.01500000, // 转账金额：0.015 BTC
+            "scriptPubKey": "OP_DUP OP_HASH160 ab68025513c3dbd2f7b92a94e0581f5d50f654e7 OP_EQUALVERIFY OP_CHECKSIG" // 锁定脚本，用于锁定这笔 BTC 只能由目标地址所有者花费。
+        },
+        {
+            "value": 0.08450000, // 找零金额：0.0845 BTC
+            "scriptPubKey": "OP_DUP OP_HASH160 7f9b1a7fb68d60c536c2fd8aeaa53a8f3cc025a8 OP_EQUALVERIFY OP_CHECKSIG",
+        }
+    ]
+}
+
+补充：
+    "scriptPubKey": "OP_DUP OP_HASH160 ab68025513c3dbd2f7b92a94e0581f5d50f654e7 OP_EQUALVERIFY OP_CHECKSIG"
+        这是 P2PKH（Pay-to-PubKey-Hash）脚本的一种标准形式：
+            OP_DUP：复制栈顶的公钥。
+            OP_HASH160：对公钥进行 RIPEMD-160(SHA256()) 哈希运算。
+            ab68025513c3dbd2f7b92a94e0581f5d50f654e7：锁定的公钥哈希值。
+            OP_EQUALVERIFY：检查两个栈顶值是否相等。
+            OP_CHECKSIG：验证签名。
 ```
 
 　
