--- a/others/002 BTC交易浅析.md
+++ b/others/002 BTC交易浅析.md
@@ -167,7 +167,7 @@
         {
             "txid": "7957a35fe64f80d234d76d83a2a8f1a0d8149a41d81de548f0a65a8a999f6f18", // 上一笔交易的哈希值，表示这笔输入引用了该笔交易的输出。
             "vout": 0, // 上一笔交易中某个具体输出的索引号，此处是第 0 个输出。
-            "scriptSig" : "3045022100884d142d86652a3f47ba4746ec719bbfbd040a570b1deccbb6498c75c4ae24cb02204b9f039ff08df09cbe9f6addac960298cad530a863ea8f53982c09db8f6e3813[ALL] // 签名数据0484ecc0d46f1918b30928fa0e4ed99f16a0fb4fde0735e7ade8416ab9fe423cc5412336376789d172787ec3457eee41c04f4938de5cc17b4a10fa336a8d752adf", // 公钥
+            "scriptSig" : "3045022100884d142d86652a3f47ba4746ec719bbfbd040a570b1deccbb6498c75c4ae24cb02204b9f039ff08df09cbe9f6addac960298cad530a863ea8f53982c09db8f6e3813[ALL] 0484ecc0d46f1918b30928fa0e4ed99f16a0fb4fde0735e7ade8416ab9fe423cc5412336376789d172787ec3457eee41c04f4938de5cc17b4a10fa336a8d752adf",
             "sequence": 4294967295 // 序列号，值为 4294967295，表示未启用时间锁。
         }
     ],
@@ -184,6 +184,10 @@
 }
 
 补充：
+    "scriptSig" : "30450...db8f6e3813[ALL] 0484ecc...52adf"
+        签名数据：30450...db8f6e3813[ALL]
+        公钥：0484ecc...52adf
+
     "scriptPubKey": "OP_DUP OP_HASH160 ab68025513c3dbd2f7b92a94e0581f5d50f654e7 OP_EQUALVERIFY OP_CHECKSIG"
         这是 P2PKH（Pay-to-PubKey-Hash）脚本的一种标准形式：
             OP_DUP：复制栈顶的公钥。
