--- a/others/002 BTC交易浅析.md
+++ b/others/002 BTC交易浅析.md
@@ -212,10 +212,10 @@
     双花攻击，必然需要51%攻击才能实施。
 
     比特币的稀缺性：
-        - 固定总供应量，但不适合做货币
-        - 因为，社会创造的价值在增加，货币量却没有增加，这个明显不符合"货币金融学"。
+        固定总供应量，但不适合做货币
+        因为，社会创造的价值在增加，货币量却没有增加，这个明显不符合"货币金融学"。
 
     量子计算机：
-        - 比特币的有生之年，量子计算机的发展，恐怕无法达到如此境界。
-        - 量子计算机首先威胁的是传统金融体系，因为加密货币的市值占比量，是无法与传统金融的市值比拟的。
+        比特币的有生之年，量子计算机的发展，恐怕无法达到如此境界。
+        量子计算机首先威胁的是传统金融体系，因为加密货币的市值占比量，是无法与传统金融的市值比拟的。
 ```
