--- a/others/002 BTC交易浅析.md
+++ b/others/002 BTC交易浅析.md
@@ -184,6 +184,10 @@
 }
 
 补充：
+    "txid": "7957a35fe64f80d234d76d83a2a8f1a0d8149a41d81de548f0a65a8a999f6f18"
+        本次示例交易的输入部分，就来自于"7957a35fe64f80d234d76d83a2a8f1a0d8149a41d81de548f0a65a8a999f6f18"，内置了金额 0.1BTC。
+        可以去比特币浏览器查看。
+
     "scriptSig" : "30450...db8f6e3813[ALL] 0484ecc...52adf"
         签名数据：30450...db8f6e3813[ALL]
         公钥：0484ecc...52adf
