--- a/others/002 BTC交易浅析.md
+++ b/others/002 BTC交易浅析.md
@@ -65,6 +65,12 @@
         验证交易：检查区块中的所有交易是否有效。
         检查链上链接：确认新区块正确链接到前一个区块。
     如果区块有效，全节点会将其添加到本地的区块链中，并继续广播给其他节点。
+
+出块时间：
+    约10分钟。
+
+交易确认位：
+    通常需要 6个确认 才能认为交易是最终且不可逆的，大约60分钟。    
 ```
 
 #### 交易确认
@@ -74,7 +80,7 @@
     这笔交易现在被认为是已确认的交易。
 
 [王五]的余额更新：
-    [王五]的钱包软件会检测到这笔交易，并更新他的余额（增加1 BTC）。
+    [王五]的钱包软件会检测到这笔交易，并更新他的余额（增加1 BTC）。    
 ```
 
 #### 奖励分配
