--- a/others/003 ETH交易浅析.md
+++ b/others/003 ETH交易浅析.md
@@ -80,6 +80,16 @@
         检查状态转换：执行区块中的所有交易，更新以太坊的状态（账户余额、合约状态等）。
         检查链上链接：确认新区块正确链接到前一个区块。
     如果区块有效，节点会将其添加到本地的区块链中，并继续广播给其他节点。
+
+出块时间：
+    ETH1.0：约13到15秒。
+    ETC：约13秒。
+    ETH2.0：约12秒。
+
+交易确认位：
+    ETH1.0：通常需要12个区块，大约3分钟。
+    ETC：通常需要120个区块，大约26分钟。
+    ETH2.0：通常需要32-64个区块，大约6-12分钟。
 ```
 
 #### 交易确认
@@ -91,7 +101,7 @@
     以太坊的状态（全局状态树）会更新：
         张三的账户余额减少（扣除转账金额和 Gas 费用）。
         李四的账户余额增加（增加转账金额）。
-        如果交易涉及智能合约调用，合约的状态也会相应更新。
+        如果交易涉及智能合约调用，合约的状态也会相应更新。        
 ```
 
 #### 奖励分配
